@@ -1,3 +1,3 @@
 module Devise
-  VERSION = "1.1.0".freeze
+  VERSION = "1.2.0".freeze
 end
