@@ -1,3 +1,6 @@
+* enhancements
+  * Added OAuth 2 support
+
 == 1.1.0
 
 * enhancements
